--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
-    
+    <h1>Rock, Paper and Scissors</h1>
+    <button><strong>Start Game</strong></button>
 </body>
 </html>
