--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <h1>Rock, Paper and Scissors</h1>
-    <button><strong>Start Game</strong></button>
+    <button onclick="startGame()"><strong>Another Round</strong></button>
+    <div class="score-container">Your score: <div class="your-score">0</div></div>
+    <div class="score-container">Computer score: <div class="computer-score">0</div></div>
+    <button onclick="quitGame()"><strong>Quit Game</strong></button>
 </body>
 </html>
