Add score functionality

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <h1>Rock, Paper and Scissors</h1>
     <button onclick="startGame()"><strong>Another Round</strong></button>
-    <div class="score-container">Your score: <div class="your-score">0</div></div>
-    <div class="score-container">Computer score: <div class="computer-score">0</div></div>
+    <div class="score-container">Your score: <div id="your-score">0</div></div>
+    <div class="score-container">Computer score: <div id="computer-score">0</div></div>
     <button onclick="quitGame()"><strong>Quit Game</strong></button>
 </body>
 </html>
