Add UI buttons for choice

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <button onclick="startGame()"><strong>Another Round</strong></button>
     <div class="score-container">Your score: <div id="your-score">0</div></div>
     <div class="score-container">Computer score: <div id="computer-score">0</div></div>
-    <button onclick="quitGame()"><strong>Reset Game</strong></button>
+    <div class="button-container">
+        <button class="rock">Rock</button>
+        <button class="paper">Paper</button>
+        <button class="scissors">Scissors</button>
+    </div>
+
+    <button class="reset" onclick="quitGame()"><strong>Reset Game</strong></button>
 </body>
 </html>
