--- a/index.html
+++ b/index.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock, Paper, Scissors</title>
-    <script src="js/rps.js"></script>
+    <script src="js/rps.js" defer></script>
     <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
     <h1>Rock, Paper and Scissors</h1>
-    <button onclick="startGame()"><strong>Another Round</strong></button>
     <div class="score-container">Your score: <div id="your-score">0</div></div>
     <div class="score-container">Computer score: <div id="computer-score">0</div></div>
     <div class="button-container">
-        <button class="rock">Rock</button>
-        <button class="paper">Paper</button>
-        <button class="scissors">Scissors</button>
+        <button class="rps">Rock</button>
+        <button class="rps">Paper</button>
+        <button class="rps">Scissors</button>
     </div>
 
     <button class="reset" onclick="quitGame()"><strong>Reset Game</strong></button>
