--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <h1>Rock, Paper and Scissors</h1>
+    <div class="your-choice">Your Choice: </div>
+    <div class="computer-choice">Computer Choice: </div>
+    <div class="win-lose"></div>
     <div class="score-container">Your score: <div id="your-score">0</div></div>
     <div class="score-container">Computer score: <div id="computer-score">0</div></div>
     <div class="button-container">
