Change button colors rps

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <div class="score-container">Your score: <div id="your-score">0</div></div>
     <div class="score-container">Computer score: <div id="computer-score">0</div></div>
     <div class="button-container">
-        <button class="rps">Rock</button>
-        <button class="rps">Paper</button>
-        <button class="rps">Scissors</button>
+        <button class="rps rock">Rock</button>
+        <button class="rps paper">Paper</button>
+        <button class="rps scissors">Scissors</button>
     </div>
 
     <button class="reset" onclick="quitGame()"><strong>Reset Game</strong></button>
